# FinDash

./: .env.prod  .env.stag  .flake8  .gitignore  Procfile  README.md  README.rst  logger.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  settings.yaml  setup.py
.github/workflows/: lint.yml
FinDash/: accounts.py  db.py  frontend.py  settings.yaml  transactions_db.py  transactions_importer.py
FinDash/pages/: breakdown.py
findash/: accounts.py  categories.py  categories_db.py  change_list.py  db.py  dummy_data.py  element_ids.py  file_io.py  frontend.py  logger.conf  main.py  s3.py  settings.py  settings.yaml  shared_elements.py  transactions_db.py  transactions_importer.py  utils.py
findash/assets/: dropdown_fix.css  style.css
findash/page_elements/: transactions_callbacks.py  transactions_layout_creators.py  transactions_split_window.py
findash/pages/: breakdown.py  categories.py  monthly.py  transactions.py
tests/: dummy_data.py  test_category_db.py  test_trans_db.py  test_transactions_importer.py
tests/create_dummy_data/: create_all_dummy_data.py  dummy_cat_and_accounts_db.py  dummy_trans_db.py  names.py
