[tool.poetry]
name = "findash"
version = "0.1.0"
description = "Financial dashboard for budgeting"
authors = ["amihai <amihaio@gmail.com>"]
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.9"
dash = "==2.9.1"
pandas = "==1.5.2"
plotly = "==5.9"
dash-mantine-components = "==0.12.0"
dash-bootstrap-components = "==1.4.1"
dash-iconify = "==0.1.2"
pyarrow = "^12.0.0"
dash-bootstrap-templates = "^1.0.8"
gunicorn = "^20.1.0"
dash-auth = "^2.0.0"
hypothesis = "^6.75.2"
python-dotenv = "^1.0.0"
fsspec = "^2023.5.0"
s3fs = "^2023.5.0"
boto3 = "1.26.63"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "==7.2.2"
pytest-env = "==0.8.1"
moto = "==4.1.6"
pytest-mock = "==3.10.0"
pre-commit = "==3.2.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
